--- a/week3.html
+++ b/week3.html
@@ -103,7 +103,7 @@
 
                   <!-- 檢查是否為陣列 -->
                   <div v-if="Array.isArray(tempProduct.imagesUrl)">
-                    <div class="mb-1" v-for="(image, key) in tempProduct.imagesUrl" :key="key">
+                    <div class="mb-1" v-for="(image, key) in tempProduct.imagesUrl" :key="key" >
                       <div class="mb-3">
                         <label for="imageUrl" class="form-label">圖片網址</label>
                         <input v-model="tempProduct.imagesUrl[key]" type="text" class="form-control"
@@ -111,8 +111,12 @@
                       </div>
                       <img class="img-fluid" :src="image">
                     </div>
+
+                
+
                     <div
-                      v-if="!tempProduct.imagesUrl.length || tempProduct.imagesUrl[tempProduct.imagesUrl.length - 1]">
+                      v-if="tempProduct.imagesUrl.length == 0 || tempProduct.imagesUrl[tempProduct.imagesUrl.length - 1]">
+                   
                       <button class="btn btn-outline-primary btn-sm d-block w-100"
                         @click="tempProduct.imagesUrl.push('')">
                         新增圖片
