--- a/week3.html
+++ b/week3.html
@@ -55,7 +55,7 @@
             <tr>
               <td>{{item.category}}</td>
               <td>{{item.title}}</td>
-              <td class="text-start">{{item.price}}</td>
+              <td class="text-start" style="text-decoration: line-through">{{item.price}}</td>
               <td class="text-start">{{item.origin_price}}</td>
               <td>
                 <span class="text-success" v-if="item.is_enabled == 1 ">啟用</span>
@@ -158,12 +158,12 @@
                   <div class="row">
                     <div class="mb-3 col-md-6">
                       <label for="origin_price" class="form-label">原價</label>
-                      <input id="origin_price" v-model.number="tempProduct.origin_price" type="number" min="0"
+                      <input id="origin_price" v-model.number="tempProduct.price" type="number" min="0"
                         class="form-control" placeholder="請輸入原價">
                     </div>
                     <div class="mb-3 col-md-6">
                       <label for="price" class="form-label">售價</label>
-                      <input id="price" v-model.number="tempProduct.price" type="number" min="0" class="form-control"
+                      <input id="price" v-model.number="tempProduct.origin_price" type="number" min="0" class="form-control"
                         placeholder="請輸入售價">
                     </div>
                   </div>
